WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32786
[WML] Compilation errors in WML enabled build.
https://bugs.webkit.org/show_bug.cgi?id=32786
Summary
[WML] Compilation errors in WML enabled build.
Nayan
Reported
2009-12-20 03:24:09 PST
Due to the change in change set #52314, following errors are introduced in WebCore wml module. CXX WebCore/wml/libWebCore_la-WMLDocument.lo ../../WebCore/wml/WMLDocument.cpp: In member function ‘virtual void WebCore::WMLDocument::finishedParsing()’: ../../WebCore/wml/WMLDocument.cpp:74: error: invalid use of incomplete type ‘struct WebCore::BackForwardList’ ../../WebCore/page/Page.h:44: error: forward declaration of ‘struct WebCore::BackForwardList’ CXX WebCore/wml/libWebCore_la-WMLPageState.lo In file included from ../../WebCore/wml/WMLPageState.cpp:25: ../../WebCore/wml/WMLPageState.h:35: error: expected initializer before ‘<’ token ../../WebCore/wml/WMLPageState.h:51: error: ‘WMLVariableMap’ has not been declared ../../WebCore/wml/WMLPageState.h:69: error: ‘WMLVariableMap’ does not name a type ../../WebCore/wml/WMLPageState.h: In member function ‘void WebCore::WMLPageState::storeVariable(const WebCore::String&, const WebCore::String&)’: ../../WebCore/wml/WMLPageState.h:50: error: ‘m_variables’ was not declared in this scope ../../WebCore/wml/WMLPageState.h: In member function ‘void WebCore::WMLPageState::storeVariables(int&)’: ../../WebCore/wml/WMLPageState.h:51: error: ‘m_variables’ was not declared in this scope ../../WebCore/wml/WMLPageState.h: In member function ‘WebCore::String WebCore::WMLPageState::getVariable(const WebCore::String&) const’: ../../WebCore/wml/WMLPageState.h:52: error: ‘m_variables’ was not declared in this scope ../../WebCore/wml/WMLPageState.h: In member function ‘bool WebCore::WMLPageState::hasVariables() const’: ../../WebCore/wml/WMLPageState.h:53: error: ‘m_variables’ was not declared in this scope ../../WebCore/wml/WMLPageState.cpp: In destructor ‘virtual WebCore::WMLPageState::~WMLPageState()’: ../../WebCore/wml/WMLPageState.cpp:44: error: ‘m_variables’ was not declared in this scope ../../WebCore/wml/WMLPageState.cpp: In member function ‘void WebCore::WMLPageState::reset()’: ../../WebCore/wml/WMLPageState.cpp:63: error: ‘m_variables’ was not declared in this scope ../../WebCore/wml/WMLPageState.cpp:67: error: invalid use of incomplete type ‘struct WebCore::BackForwardList’ ../../WebCore/page/Page.h:44: error: forward declaration of ‘struct WebCore::BackForwardList’ ../../WebCore/wml/WMLPageState.cpp: In function ‘bool WebCore::tryAccessHistoryURLs(WebCore::Page*, WebCore::KURL&, WebCore::KURL&)’: ../../WebCore/wml/WMLPageState.cpp:127: error: invalid use of incomplete type ‘struct WebCore::BackForwardList’ ../../WebCore/page/Page.h:44: error: forward declaration of ‘struct WebCore::BackForwardList’ ../../WebCore/wml/WMLPageState.cpp:131: error: invalid use of incomplete type ‘struct WebCore::BackForwardList’ ../../WebCore/page/Page.h:44: error: forward declaration of ‘struct WebCore::BackForwardList’ make[1]: *** [WebCore/wml/libWebCore_la-WMLPageState.lo] Error 1
Attachments
Fix for compilation errors
(1.45 KB, patch)
2009-12-20 03:30 PST
,
Nayan
abarth
: review-
Details
Formatted Diff
Diff
Compilation error fix.
(1.66 KB, patch)
2009-12-20 09:38 PST
,
Nayan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Nayan
Comment 1
2009-12-20 03:30:50 PST
Created
attachment 45267
[details]
Fix for compilation errors Proposed patch for resolving compilation errors is attached.
WebKit Review Bot
Comment 2
2009-12-20 03:34:23 PST
Attachment 45267
[details]
did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebCore/wml/WMLPageState.cpp:31: Found header this file implements after a header this file implements. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] WebCore/wml/WMLDocument.cpp:33: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 2
Adam Barth
Comment 3
2009-12-20 09:32:20 PST
Comment on
attachment 45267
[details]
Fix for compilation errors Please add these headers in alphabetical order.
Nayan
Comment 4
2009-12-20 09:38:17 PST
Created
attachment 45284
[details]
Compilation error fix. Proper fix taking care of review-bot output.
WebKit Review Bot
Comment 5
2009-12-20 09:38:39 PST
style-queue ran check-webkit-style on
attachment 45284
[details]
without any errors.
WebKit Commit Bot
Comment 6
2009-12-20 19:18:02 PST
Comment on
attachment 45284
[details]
Compilation error fix. Clearing flags on attachment: 45284 Committed
r52431
: <
http://trac.webkit.org/changeset/52431
>
WebKit Commit Bot
Comment 7
2009-12-20 19:18:07 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug