2009-12-20  Nayan Kumar K  <nayankk@gmail.com>

Reviewed by Darin Adler.

        Fix for compilation errors in WML module, due to the changeset #52314.
        https://bugs.webkit.org/show_bug.cgi?id=32786

        No new tests, this is compilation error fix.

        * wml/WMLDocument.cpp:
        * wml/WMLPageState.cpp:
        * wml/WMLPageState.h:

Canonical link: https://commits.webkit.org/43844@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52431 268f45cc-cd09-0410-ab3c-d52691b4dbfc